--- a/.releaserc
+++ b/.releaserc
@@ -2,5 +2,11 @@
   "branches": [
     "master",
     "add-semantic-release"
+  ],
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/changelog",
+    "@semantic-release/git"
   ]
 }
