--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "dependencies": {
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0"
+  },
+  "devDependencies": {
+    "@semantic-release/exec": "^5.0.0"
   }
 }
